--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "autoload": {
         "psr-4": {
             "LifeSpikes\\PhpBeam\\": "src"
-        }
+        },
+        "files": [
+            "src/Functions.php"
+        ]
     },
     "extra": {
         "laravel": {
@@ -16,6 +19,6 @@
     "require": {
         "inertiajs/inertia-laravel": "^0.5.4",
         "innocenzi/laravel-vite": "0.2.*",
-        "lifespikes/laravel-bare": "^0.7.55"
+        "lifespikes/laravel-bare": "^0.7.60"
     }
 }
